# ic-sandbox

./: .editorconfig  .gitignore  Cargo.toml  README.md  default.nix  flake.nix
ast-ext/: Cargo.toml
ast-ext/src/: lib.rs
examples/: addition.d  addition.inet  addition.lc  ann_symm.d  arg_duplication.lc  arg_duplication_y.lc  bool.lc  church_numerals.lc  comm_constr_dup.d  comm_dup_constr.d  comm_era_constr.d  comm_era_era.d  counter.lc  discard.lc  fact.lc  fib.d  identity.inet  import.lc  irreducible.lc  lists.d  lists.dcode  lists.lc  multiplication.lc  num_if.lc  nums.d  pair.lc  pred.lc  recursion.lc  scratchpad.d
examples/typing/: duplicate_identifier.d  unrecognized_identifiers.d  well_typed.d
ic-derive/: Cargo.toml
ic-derive/src/: lib.rs
icc/: Cargo.toml
icc/examples/: addition.d  bench_ann_alpah.rs  fib.d  identity.d  substituted_addition.d
icc/src/: cli.rs  heuristics.rs  lib.rs  main.rs  preprocessor.rs  test.rs
icc/src/bytecode/: combinated.rs  mod.rs  vm.rs
icc/src/bytecode2/: compilation.rs  mod.rs  vm.rs
icc/src/bytecode2/vm/: mod.rs  redex_tree.rs
icc/src/parser/: ast.rs  ast_combinators.rs  ast_lafont.rs  mod.rs  naming.rs  parser_combinators.rs  parser_lafont.rs
icc/src/reducers/: combinators.rs  naive.rs
icc/src/reducers/combinators/: ast_walker.rs  mod.rs
icc/src/reducers/combinators/buffered/: mod.rs
icc/src/reducers/combinators/buffered/adjacency_matrix/: atomic_reprs.rs  matrix_buffer.rs  mod.rs  reducer.rs
icc/src/reducers/combinators/crossbeam/: mod.rs
icviz/: Cargo.toml  k_eval.d  out.html  out.tex  s_decoder.d  shell.nix  test_decoder.d
icviz/examples/: s_combinator.d
icviz/src/: main.rs
src/: ast.rs  ast_lafont.rs  cli.rs  heuristics.rs  jit.rs  lib.rs  main.rs  parser_lafont.rs  reducers.rs  test.rs
src/bytecode/: combinated.rs  mod.rs  naming.rs  vm.rs
src/parser/: ast_combinators.rs  ast_lafont.rs  mod.rs  naming.rs  parser_combinators.rs  parser_lafont.rs
src/reducers/: combinators.rs  mod.rs  naive.rs
stdlib/: combinator.inet  combinators.d  math.inet  num.d  num.inet
toyfp/: Cargo.toml
toyfp/examples/: curry.d  curry.fp  identity.d  identity.fp  k_comb.d  k_comb_chain.d  k_comb_simple.d  s_comb_simple.d
toyfp/src/: cli.rs  compiler.rs  lib.rs  main.rs  parser.rs  parser_icalc.rs  parser_sk.rs
toyfp/src/cli/: icalc.rs  lambda.rs  mod.rs  sk.rs
toyfp/src/compiler/: builder.rs  graphical.rs  heuristics.rs  mod.rs  preprocessor.rs
toyfp/src/compiler/typing/: mod.rs
toyfp/stdlib/: bool.lc  func.lc  list.lc  num.lc
vm/: Main.lean  README.md  Vm.lean  lake-manifest.json  lakefile.toml
vm/Vm/: Ast.lean  Reducer.lean
