[package]
name = "inetlang"
version = "0.1.0"
edition = "2021"

[lib]
name = "inetlib"
path = "src/lib.rs"

[[bin]]
name = "icc"
path = "src/main.rs"

[dependencies]
chumsky = "0.9.3"
serde = { version = "1.0.215", features = ["derive"] }
clap = "4.5.21"
bincode = "1.3.3"
ariadne = "0.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
test-log = { version = "0.2.16", features = ["trace"] }
