[workspace]
members = [
    "ast-ext",
    "icc",
    "icviz",
    "toyfp",
]
resolver = "2"

[workspace.dependencies]
chumsky = "0.9.3"
ast-ext = { path = "ast-ext" }
icc = { path = "icc" }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = "4.5.21"
ariadne = "0.5.0"
rustyline = { version = "15.0.0", features = ["derive"] }
