[workspace]
members = [
    "ast-ext",
    "ic-derive",
    "icc", "icviz",
    "toyfp",
]
resolver = "2"

[workspace.dependencies]
chumsky = "0.9.3"
ast-ext = { path = "ast-ext" }
icc = { path = "icc", default-features = false }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
clap = "4.5.21"
ariadne = "0.5.0"
rustyline = { version = "15.0.0", features = ["derive"] }
itertools = { version = "0.14.0" }
test-log = { version = "0.2.16", features = ["trace"] }
