[package]
name = "icc"
version = "0.1.0"
edition = "2021"

[features]
threadpool = ["rayon"]
default = ["threadpool"]

[lib]
name = "inetlib"
path = "src/lib.rs"

[[bin]]
name = "icc"
path = "src/main.rs"

[dependencies]
chumsky = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.134" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = "1.3.3"
ariadne = { workspace = true }
test-log = { version = "0.2.16", features = ["trace"] }
rustyline = { workspace = true }
rayon = { version = "1.10.0", optional = true }
ast-ext = { workspace = true }
